--- a/web/sass/custom/_variables.scss
+++ b/web/sass/custom/_variables.scss
@@ -2,11 +2,11 @@
 $primary-color: #444444;
 $primary-light-color: lighten($primary-color, 15%);
 $primary-dark-color: darken($primary-color, 15%);
-$secondary-color: #29429E;
+$secondary-color: #75afdd;
 $secondary-light-color: lighten($secondary-color, 15%);
 $secondary-dark-color: darken($secondary-color, 15%);
 $secondary-color-transparent: rgba($secondary-color, 0.8);
-$third-color: #E9AD25;
+$third-color: #acc32d;
 $third-light-color: lighten($third-color, 15%);
 $third-dark-color: darken($third-color, 15%);
 
@@ -26,9 +26,6 @@ $error-color: color("red", "base");
 $link-color: $black-color;
 $link-hover-color: $secondary-color;
 
-/*** Badges ***/
-$badge-bg-color: $secondary-color;
-
 /*** Buttons ***/
 $button-bg-color-disabled: #DFDFDF;
 $button-color: $secondary-color;
@@ -40,60 +37,13 @@ $button-height: 36px;
 $button-font-size-shared: 1.3rem;
 $button-large-icon-font-size: 1.6rem;
 $button-line-height: 36px;
-
-/*** Cards ***/
-$card-padding: 20px;
-$card-bg-color: #fff;
-$card-link-color: color("orange", "accent-2");
-$card-link-color-light: lighten($card-link-color, 20%);
-
-/*** Collapsible ***/
-$collapsible-height: 3rem;
-$collapsible-header-color: #fff;
-$collapsible-border-color: #ddd;
-
-/*** Dropdown ***/
-$dropdown-bg-color: #fff;
-$dropdown-hover-bg-color: #eee;
-$dropdown-color: $secondary-color;
+$button-raised-background: $secondary-color;
+$button-raised-background-hover: $secondary-dark-color;
 
 /*** Fonts ***/
-$primary-font-family: sans-serif;
-$navigation-font-family: sans-serif;
+$primary-font-family: 'Raleway', sans-serif;;
+$navigation-font-family: $primary-font-family;
 $roboto-font-path: "../font/roboto/";
-
-/*** Images ***/
-$image-path: "../basic-assets/img/";
-
-/*** Forms ***/
-// Text Inputs + Textarea
-$input-border-color: color("grey", "base");
-$input-bg-color: #fff;
-$input-error-color: $error-color;
-$input-success-color: $success-color;
-$input-focus-color: $secondary-color;
-$label-font-size: .8rem;
-$input-disabled-color: rgba(0,0,0, .26);
-$input-disabled-solid-color: #BDBDBD;
-
-// Radio Buttons
-$radio-fill-color: $secondary-color;
-$radio-empty-color: #5a5a5a;
-
-// Switches
-$switch-bg-color: $secondary-color;
-$switch-checked-lever-bg: desaturate(lighten($secondary-color, 25%), 25%);
-$switch-unchecked-bg: #F1F1F1;
-$switch-unchecked-lever-bg: #818181;
-
-// Date Picker
-$datepicker-weekday-bg: darken($secondary_color, 7%);
-$datepicker-date-bg: $secondary_color;
-$datepicker-year: rgba(255, 255, 255, .4);
-$datepicker-focus: rgba(0,0,0, .05);
-$datepicker-selected: $secondary-color;
-$datepicker-selected-outfocus: desaturate(lighten($secondary-color, 35%), 15%);
-
 
 /*** Global ***/
 // Media Query Ranges
@@ -134,24 +84,11 @@ $sidenav-padding-right: 15px;
 /*** Photo Slider ***/
 $slider-bg-color: color('grey', 'base');
 $slider-bg-color-light: color('grey', 'lighten-2');
-$slider-indicator-color: color('green', 'base');
-
-/*** Tabs ***/
-$tabs-underline-color: $primary-light-color;
-$tabs-text-color: $primary-color;
-$tabs-bg-color: #fff;
-
-/*** Tables ***/
-$table-border-color: #d0d0d0;
-$table-striped-color: #f2f2f2;
-
-/*** Toasts ***/
-$toast-height: 48px;
-$toast-color: #323232;
-$toast-text-color: #fff;
+$slider-indicator-color: $third-color;
 
 /*** Typography ***/
 $off-black: rgba(0, 0, 0, 0.87);
+
 // Header Styles
 $h1-fontsize: 4.2rem;
 $h2-fontsize: 2.08rem;
@@ -167,15 +104,5 @@ $footer-bg-color: $primary-color;
 $range : $large-screen - $small-screen;
 $intervals: 20;
 $interval-size: $range / $intervals;
-
-/*** Collections ***/
-$collection-border-color: #e0e0e0;
-$collection-bg-color: #fff;
-$collection-active-bg-color: $secondary-color;
-$collection-active-color: lighten($secondary-color, 55%);
-$collection-hover-bg-color: #ddd;
-
-/* Progress Bar */
-$progress-bar-color: $secondary-color;
 
 /*** Page specific ***/
